:bug: Fix TypedAttribute
