# src/backend/app/internal/model/ocel.py
@@ -1,4 +1,4 @@
-from typing import Hashable, Literal, Self, TypedDict, cast
+from typing import Hashable, Self, TypedDict, cast
 
 import pandas as pd
 from ocelescope import (
@@ -116,18 +116,15 @@ class AggregatedAttribute(Attribute):
 
 
 class TypedAttribute(Attribute):
-    entity_type: Literal["event", "object"]
-    entity_type_name: str
+    entity_type: str
 
     @classmethod
     def from_df_row(cls, row: tuple[Hashable, pd.Series]) -> "TypedAttribute":
-        index = cast(tuple[str, str, str], row[0])
+        index = cast(tuple[str, str], row[0])
         entity_type = index[1]
-        entity_type_name = index[2]
         base = Attribute.from_df_row((index[0], row[1]))
 
         return cls(
-            entity_type=cast(Literal["event", "object"], entity_type),
-            entity_type_name=entity_type_name,
+            entity_type=entity_type,
             **base.model_dump(),
         )
